2004-07-02  Richard Henderson  <rth@redhat.com>

	* expmed.c (make_tree): Don't use SET_DECL_RTL.

2004-07-02  Steven Bosscher  <stevenb@suse.de>

	* tree-flow.h (bb_ann_d): Remove ephi_nodes field.

2004-07-01  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (struct machine_function): Add gp_save_rtx.
	(alpha_gp_save_rtx): Use assign_stack_local instead of
	gen_mem_addressof.

2004-07-01  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (struct alpha_rtx_cost_data): Add int_div.
	(alpha_rtx_cost_data): Update to match.
	(alpha_rtx_cost_size): New.
	(alpha_rtx_costs): Honor optimize_size.

2004-07-01  Richard Henderson  <rth@redhat.com>

	* gimple-low.c (lower_function_body): Don't reset_block_changes here.
	* cfgexpand.c (tree_expand_cfg): Do it here.
	* config/alpha/alpha.c (alpha_output_mi_thunk_osf): And here.
	* config/ia64/ia64.c (ia64_output_mi_thunk): And here.
	* config/mips/mips.c (mips_output_mi_thunk): And here.
	* config/rs6000/rs6000.c (rs6000_output_mi_thunk): And here.
	* config/sh/sh.c (sh_output_mi_thunk): And here.
	* config/sparc/sparc.c (sparc_output_mi_thunk): And here.

2004-07-01  Richard Henderson  <rth@redhat.com>

	* tree.def (RTL_EXPR): Remove.
	* c-typeck.c (lvalue_p): Don't handle it.
	* expr.c (safe_from_p): Likewise.
	(expand_expr_real_1): Likewise.
	* fold-const.c (non_lvalue, operand_equal_p, fold): Likewise.	
	(fold_checksum_tree, tree_expr_nonnegative_p): Likewise.
	* gengtype.c (adjust_field_tree_exp): Likewise.
	* stmt.c (warn_if_unused_value): Likewise.
	* tree-gimple.c (recalculate_side_effects): Likewise.
	* tree-pretty-print.c (dump_generic_node): Likewise.
	* tree.c (make_node_stat, first_rtl_op, unsave_expr_1): Likewise.
	(unsafe_for_reeval, stabilize_reference, build1_stat): Likewise.
	* tree.h (RTL_EXPR_SEQUENCE, RTL_EXPR_RTL, RTL_EXPR_ALT_RTL): Remove.

	* stmt.c (struct stmt_status): Remove x_last_expr_type,
	x_last_expr_value, x_last_expr_alt_rtl, x_expr_stmts_for_value.